--- a/index.html
+++ b/index.html
@@ -663,12 +663,12 @@
 								<button type="submit" class="btn-site">Send message</button>
 							</div>
 						</form>
-						<div class="new-validate__error">
+						<div class="new-validate__error" style="display: none;">
 							<h3><b>Error occurred.</b></h3>
 							<p>Your message could not be sent right now. Please try again later or contact our support our support
 								team on email or phone.</p>
 						</div>
-						<div class="new-validate__success">
+						<div class="new-validate__success" style="display: none;">
 							<h3><b>Thank you!</b></h3>
 							<p>Your message has been sent.</p>
 						</div>
